--- a/tcatch2/src/main/webapp/resources/css/mypage/mypage.css
+++ b/tcatch2/src/main/webapp/resources/css/mypage/mypage.css
@@ -964,7 +964,7 @@ ul.gbox_notice li em{ text-decoration:underline;}
 .date_list ul li input.date{ border:1px solid #CCC; height:16px; margin-right:3px; vertical-align:middle;}
 .date_list ul li.sec{ margin-left:30px; position:relative; top:-3px;}
 
-.memo{ background:url(../images/viewticket.gif) no-repeat; height:265px; margin-bottom:10px; position:relative;}
+.memo{ background:url(../images/mypage/viewticket.gif) no-repeat; height:265px; margin-bottom:10px; position:relative;}
 .memo h3{ padding:7px 8px 8px 25px;}
 .memo h3 span{ font:bold 24px Tahoma; color:#3c3c3c; position:relative; display:block; height:25px; float:left;}
 .memo h3 em{ position:absolute; bottom:0; right:0;}
