--- a/tcatch2/src/main/webapp/resources/css/menu/menu.css
+++ b/tcatch2/src/main/webapp/resources/css/menu/menu.css
@@ -4,14 +4,13 @@
 .perform-top{display:block; width:100%; height:100px; min-width:1300px; position:absolute; top:0; left:0;z-index:50;}
 .perform-top.fixed{position:fixed; top:0px; background:#fff;border-bottom:1px solid #ddd;}
 .perform-top.movie{background:#fff;border-bottom:1px solid #ddd;}
-.pf-left{position:absolute; left:30px; top:0px;width:150px;height:30px;z-index:10;background:rgba(0,0,0,0);}
 
 .pf-left a span{display:block; height:2px; background:#fff;}
 .perform-top.fixed .pf-left a span{background:#000;}
 .perform-top.fixed .pf-left a span.on{background:#fff;}
 .perform-top.movie .pf-left a span{background:#000;}
-.pf-left a span.pf-ham1{width:15px;margin-bottom:5px;}
-.pf-left a span.pf-ham2{width:22px;margin-bottom:5px;}
+.pf-left a span.pf-ham1{width:15px;}
+.pf-left a span.pf-ham2{width:22px;}
 .pf-left a span.pf-ham3{width:15px;}
 
 
