--- a/tcatch2/src/main/webapp/resources/css/mypage/mypage.css
+++ b/tcatch2/src/main/webapp/resources/css/mypage/mypage.css
@@ -815,7 +815,7 @@ p.ntit em{ font:normal 12px 돋움; float:right; padding:1px 10px 5px 30px; back
 .my_list01{ border:1px solid #d2d2d2; border-top:2px solid #4e7ad1; display:inline-block;}
 .my_list01 li{ text-align: center;float:left;  background-color:#f9f9fb; _display:inline-block; _overflow:hidden;  /* _height:138px; */  padding-bottom:5px}
 .my_list01 li div{ background:url(http://tkfile.yes24.com/img/mypage/bg_line01.gif) no-repeat right; padding-right:20px; width:255px; height:108px; padding:18px 21px 18px 18px; }
-.my_list01 li div.end{ background:none; border:none; width:206px;} 
+.my_list01 li div.end{ background:none; border:none;} 
 .my_list01 li img{ float:left;}
 .my_list01 li strong{ margin-left:65px; font-weight:bold; color:#3c3c3c; display:block; margin-bottom:14px; height:26px; margin-top:2px; margin-left:61px; line-height:13px; word-wrap: break-word; word-break: break-all;overflow: hidden;}
 .my_list01 li span{margin-left:62px; font-size:11px; display:block;line-height:15px;}
